objects/tspa__Visual_Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>tspa__AcceptDateTime__c</fullName>
        <label>Accept Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tspa__AcceptedByAgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted By Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__AgentWorkStatus__c</fullName>
        <label>Agent Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>DeclinedOnPushTimeout</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__AppleStoreConfiguration__c</fullName>
        <label>Apple Store Configuration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AssignedDateTime__c</fullName>
        <label>Assigned Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tspa__CancellationDateTime__c</fullName>
        <label>Cancellation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tspa__Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Channel_Id__c</fullName>
        <label>Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__CloseDateTime__c</fullName>
        <label>Close Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tspa__Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Community_URL__c</fullName>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tspa__CreationTimestamp__c</fullName>
        <label>Creation Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__EnableAudio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Audio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Live_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visual_Remote_Assistant_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tspa__RecordId__c</fullName>
        <label>RecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Redirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Session Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Session Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Type__c</fullName>
        <label>Session Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session</label>
        <referenceTo>tspa__TechSeeSessions__c</referenceTo>
        <relationshipLabel>Visual Remote Assistant-Support Requests</relationshipLabel>
        <relationshipName>Visual_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tspa__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Visual Remote Assistant-Support Request</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <columns>NAME</columns>
        <columns>tspa__Session__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VSR-{00000}</displayFormat>
        <label>Visual Support Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant-Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>